--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "mineru[core]>=2.6.8",
     "json-repair>=0.54.3",
     "gradio>=4.0.0",
+    "langfuse>=2.0.0",
 ]
 
 [project.optional-dependencies]
