去除本地解析pdf的方法和对应的依赖

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "openai>=1.54.0",
     "python-dotenv>=1.0.1",
     "pandas>=2.2.0",
-    "mineru[core]>=2.6.8",
+    "requests>=2.31.0",
     "json-repair>=0.54.3",
     "gradio>=4.0.0",
     "langfuse>=2.0.0",
